# coding-ethos

./: .gitattributes  .gitignore  .golangci.yml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHOS.md  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  coding_ethos.yml  config.yaml  lefthook.yml  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  repo_config.example.yaml  repo_ethos.example.yml  repo_ethos.yml  ruff.toml
.agent-context/prompt-addons/: claude.md  codex.md  gemini.md
.agents/ethos/: README.md  documentation-as-contract.md  evidence-based-engineering-and-decision-quality.md  exception-hierarchy-and-error-messages.md  fail-fast-fail-hard-overview.md  feedback-as-a-first-class-citizen.md  forward-motion-only.md  functional-idioms.md  generated-files-are-derived-artifacts.md  linting-as-code-quality-enforcement.md  no-conditional-imports.md  no-conditional-validation.md  no-if-available-capability-checks.md  no-inline-cli-environment-variables.md  no-optional-types-for-required-dependencies.md  no-rationalized-shortcuts.md  no-self-promotion.md  one-path-for-critical-operations.md  protocol-first-design.md  radical-visibility.md  robustness-in-motion-runtime.md  security-by-design.md  solid-is-law.md  static-analysis-is-the-first-line-of-defense.md  sub-agent-delegation-and-context-isolation.md  testing-as-specification.md  universal-responsibility.md  validation-at-the-gate.md
.claude/ethos/: MEMORY.md
.code-ethos/gemini/: prompt-pack.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
coding_ethos/: CODING_ETHOS.md  __init__.py  cli.py  gemini_prompt_pack.py  loaders.py  markdown_seed.py  merging.py  models.py  presets.py  renderers.py  tool_configs.py  yaml_utils.py
docs/: SOURCE_DOCS.md
pre-commit/: PRE-COMMIT.md  lefthook.yml  vulture_whitelist.py
pre-commit/hooks/: HOOKS.md  check_catch_and_silence.py  check_comment_suppressions.py  check_complexity.py  check_conditional_imports.py  check_direct_imports.py  check_docstring_coverage.py  check_file_docstrings.py  check_init_docs.py  check_maintainability.py  check_optional_returns.py  check_plan_completion.py  check_pyproject_ignores.py  check_pytest_gate.py  check_security_patterns.py  check_sql_centralization.py  check_structured_logging.py  check_type_checking_imports.py  check_util_centralization.py  check_vulture.py  ethos_prompts.py  ethos_prompts.pyi  gemini_orchestrator.py  gemini_shell_docs.py  gemini_shell_ethos.py  gemini_shell_review.py  gemini_utils.py  gemini_utils.pyi  hook_config.py  parallel_type_check.py  pyproject.toml  radon_utils.py  run-go-hook.sh  run-lefthook.sh  shell_prompts.py  shell_prompts.pyi  validate_manifest.py
pre-commit/hooks/coding_ethos_hooks/: CODING_ETHOS_HOOKS.md  __init__.py
pre-commit/hooks/go-hooks/: docstring_coverage.go  docstring_coverage_test.go  go.mod  go.sum  hook_errors.go  lint_constants.go  main.go  main_test.go  python_policies.go  python_policies_test.go  python_version.go  python_version_test.go  type_check.go  type_check_test.go
pre-commit/prompts/checks/: code_ethos.j2  shell_documentation.j2  shell_ethos.j2  shell_placeholder.j2  shell_review.j2  shellcheck_suppression.j2
pre-commit/prompts/macros/: common.j2
tests/: TESTS.md  __init__.py  test_cli.py  test_gemini_prompt_pack.py  test_yaml_utils.py
